Enable services + fix xorg problem for frontend service

--- a/stage4/02-apps/files/clarify-frontend.service
+++ b/stage4/02-apps/files/clarify-frontend.service
@@ -11,6 +11,9 @@ RestartSec=1
 User=clarify
 WorkingDirectory=/opt/mirror-frontend
 ExecStart=/usr/bin/env npm run dev
+# Xorg envvars
+Environment=DISPLAY=:0
+Environment=XAUTHORITY=/home/clarify/.Xauthority
 
 [Install]
 WantedBy=default.target
